update Claude md