@@ -1,12 +1,6 @@
-# Tech Strategy - Golden Paths (Customize for Your Project)
+# Tech Strategy - Golden Paths (Funny Movies Project)
 
 This is the **SINGLE SOURCE OF TRUTH** for technology choices.
-
-## Customization Required
-
-**IMPORTANT**: This file contains example technology choices. Customize it for your project.
-
-Replace the Golden Paths below with your actual tech stack. The framework enforces whatever you put here.
 
 ## Compliance
 
@@ -16,112 +10,171 @@ Replace the Golden Paths below with your actual tech stack. The framework enforc
 
 ## Language Golden Paths
 
-### TypeScript / JavaScript (Web Standard)
+### Java (Backend Standard)
 
 | Component | Choice |
 |-----------|--------|
-| Runtime | Node.js LTS (Prod), Bun (Local Scripts) |
-| Build | Vite |
-| Hygiene | Biome |
-| Testing | Vitest |
-| Frameworks | React 19, Nuxt 4, Next.js |
-| Package Manager | pnpm |
+| Runtime | JDK 24 with Preview Features |
+| Framework | Spring Boot 3.x |
+| Concurrency | Virtual Threads (Project Loom) |
+| Build Tool | Maven 3.6+ |
+| ORM | JPA / Hibernate |
+| Database Migrations | Liquibase |
+| Testing | JUnit 5 |
+| Coverage | Jacoco |
+| API Documentation | Swagger / OpenAPI |
+| Architecture | Layered (Controller → Service → Repository) |
+| Validation | Spring Validation + Custom Contract Utils |
+| Security | Spring Security + JWT |
 
-### Python (AI & Data Standard)
+**Required Maven Configuration:**
+```xml
+<compilerArgs>--enable-preview</compilerArgs>
+<argLine>--enable-preview</argLine>
+```
 
-| Component | Choice |
-|-----------|--------|
-| Runtime | Python 3.13+ |
-| Server | Granian |
-| Framework | Litestar |
-| Tooling | uv (Manager), Ruff (Linter) |
-| Validation | msgspec |
-| Database | asyncpg |
-
-### Go (Systems Standard)
-
-| Component | Choice |
-|-----------|--------|
-| Runtime | Go 1.25+ (PGO) |
-| Framework | Gin or Chi |
-| Data | sqlc + pgx v5 |
-| Linting | golangci-lint |
-| Images | Wolfi base |
-
-### Rust (Performance Standard)
+### JavaScript (Frontend Standard)
 
 | Component | Choice |
 |-----------|--------|
-| Edition | Rust 2024 |
-| Async | Tokio (general), Monoio (high-throughput) |
-| Framework | Axum |
-| Data | sqlx, rkyv |
-| Linker | Mold (dev) |
-
-### Swift (iOS Standard)
-
-| Component | Choice |
-|-----------|--------|
-| Runtime | Swift 5.10+ / Xcode 16+ |
-| UI Framework | SwiftUI (primary), UIKit (legacy) |
-| Testing | Swift Testing + XCTest |
-| Linting | SwiftLint |
-| Formatting | SwiftFormat |
-| CI/CD | fastlane |
-| Package Manager | Swift Package Manager |
-| Architecture | MVVM + Combine |
-
-### Kotlin (Android Standard)
-
-| Component | Choice |
-|-----------|--------|
-| Runtime | Kotlin 2.0+ / JDK 17 |
-| UI Framework | Jetpack Compose |
-| Testing | JUnit 5 + Compose Testing |
-| Linting | Detekt + ktlint |
-| Build | Gradle (Kotlin DSL) |
-| CI/CD | GitHub Actions + Gradle |
-| Architecture | MVVM + ViewModel + StateFlow |
+| Framework | Vanilla JavaScript (ES6+) |
+| UI Library | Bootstrap 5 |
+| HTTP Client | Fetch API |
+| Location | `webapp/` directory |
+| Architecture | Simple client-side rendering |
 
 ## Infrastructure
 
 | Component | Choice |
 |-----------|--------|
-| Static/Frontend | GitHub Pages |
-| Agile/PoC | Railway (PaaS) |
-| Production | AWS (ECS/Fargate/Lambda) |
-| Mobile Distribution | TestFlight (iOS), Google Play (Android) |
-| IaC | Terraform |
-| Edge/CDN | Cloudflare |
-| Secrets | GitHub Secrets / AWS Secrets Manager |
+| Containerization | Docker |
+| Orchestration | Kubernetes with Helm |
+| Service Type | NodePort (port 30080) |
+| Autoscaling | HPA (1-1 replicas, 80% CPU) |
+| Resource Limits | 500m CPU, 600Mi memory |
+| Deployment | SSH/SCP to VM + Kubernetes |
+| CI/CD | GitHub Actions |
+| Registry | Docker Hub |
 
 ## Data
 
 | Component | Choice |
 |-----------|--------|
-| Relational (OLTP) | PostgreSQL |
-| Object Storage | AWS S3 |
-| Vector & AI | pgvector |
+| Database | PostgreSQL |
+| Connection Pool | HikariCP (via Spring Boot) |
+| Caching | Guava LRU Cache (in-memory) |
+| Future Cache | Redis (for horizontal scaling) |
+
+**Cache Types:**
+- `VideoCacheImpl`: Video chunk caching
+- `ChunkIndexCacheImpl`: Chunk metadata caching
+- `StatsCacheImpl`: View/hit statistics caching
+- `MFASessionStoreImpl`: Temporary MFA session storage
+
+## External Integrations
+
+| Component | Choice |
+|-----------|--------|
+| Video Platform | YouTube Data API v3 |
+| AI Services | OpenAI ChatGPT API |
+| Email | Spring Mail (Gmail SMTP) |
+| Video Processing | FFmpeg (thumbnails) |
+| Authentication | JWT + Magic Links |
+| MFA | TOTP (optional) |
 
 ## Observability
 
 | Component | Choice |
 |-----------|--------|
 | Standard | OpenTelemetry (OTel) |
-| Protocol | OTLP (gRPC/HTTP) |
-| Collector | OTel Collector |
-| Dashboard | Aspire (Local), Grafana/Prometheus (Prod) |
+| Metrics | Spring Boot Actuator + Prometheus |
+| Health Checks | `/actuator/health` |
+| Metrics Endpoint | `/actuator/prometheus` |
+| Environment Config | `OTEL_*` variables |
 
-## CI/CD
+## CI/CD Pipeline
 
 | Component | Choice |
 |-----------|--------|
 | Platform | GitHub Actions |
-| Auth | OIDC |
-| Security | Trivy |
+| Build | Maven package with JDK 24 |
+| Testing | Maven test with coverage |
+| Coverage Reporting | Codecov + SonarCloud |
+| Quality Gate | +1% coverage per commit |
+| Version Management | Auto-increment in `.funny-app.version` |
+| Docker Build | Automatic on successful tests |
+| Registry | Docker Hub with version tags |
+| Deployment | Helm chart update + VM deployment script |
+| Security Scanning | Trivy (recommended, not yet implemented) |
 
-## Graduated Hosting Strategy
+**Version Strategy:**
+- Version tracked in `api/.funny-app.version`
+- Auto-incremented on successful builds
+- Git tagged with version number
+- Helm chart `values.yaml` updated automatically
 
-1. **Static Tier** (Frontend): GitHub Pages - maximum performance, zero maintenance
-2. **Agile Tier** (PoC/MVP): Railway - maximum velocity, zero infrastructure code
-3. **Production Tier** (Scale): AWS - maximum control, infinite scale
+## Code Quality
+
+| Component | Choice |
+|-----------|--------|
+| Coverage Tool | Jacoco |
+| Coverage Threshold | Progressive (+1% per commit) |
+| Threshold File | `api/.coverage-threshold` |
+| Excluded from Coverage | DTOs, entities, exceptions, config classes |
+| Code Analysis | SonarCloud |
+
+## Cross-Cutting Concerns
+
+| Component | Choice |
+|-----------|--------|
+| Audit Logging | Custom AOP (`@AuditLog`) |
+| Rate Limiting | Custom AOP (`@RateLimited`) |
+| Data Masking | Automatic for sensitive fields |
+| Error Handling | `@ControllerAdvice` with standard responses |
+| Background Jobs | Spring `@Scheduled` in `AppScheduler` |
+
+## Deployment Strategy
+
+### Development
+```bash
+./startLocal.sh  # Build + Run locally with .env
+```
+
+### Testing
+```bash
+./unittest.sh    # Run tests
+mvn verify       # Tests + Coverage report
+```
+
+### Production
+1. **VM Deployment**: SSH + SCP JAR + deployment script
+2. **Kubernetes**: Helm upgrade with new image version
+
+## Configuration Management
+
+| Component | Choice |
+|-----------|--------|
+| Spring Config | `application.yaml` |
+| Environment Variables | `.env` file (local) |
+| Required Variables | `DB_PASS`, `DB_HOST`, `GOOGLE_KEY`, `GPT_KEY`, `JWT_SECRET`, `EMAIL_SENDER`, `EMAIL_PASS` |
+| Profiles | `dev` (Swagger enabled), `prod` (Swagger disabled) |
+
+## API Standards
+
+| Component | Choice |
+|-----------|--------|
+| Response Wrappers | `ResultObjectInfo<T>`, `ResultListInfo<T>`, `ResultErrorInfo` |
+| HTTP Methods | RESTful conventions |
+| Authentication | JWT Bearer token in Authorization header |
+| Video Streaming | Range header support with chunked serving |
+| File Handling | `RandomAccessFile` for efficient streaming |
+
+## Prohibited Patterns
+
+- ❌ No Redis until horizontal scaling is needed (ADR 0003)
+- ❌ No Spring Data REST (use explicit controllers)
+- ❌ No blocking I/O operations (leverage virtual threads)
+- ❌ No synchronized keyword (use virtual thread-safe patterns)
+- ❌ No raw SQL in service layer (use repositories)
+- ❌ No hardcoded secrets (use environment variables)
+- ❌ No `ddl-auto: create` or `update` (use Liquibase migrations)
